--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "koa-err": "^1.0.1",
     "koa-accesslog": "^0.0.2",
     "koa-docs": "^0.8.2",
+    "koa-static": "^2.0.0",
     "http-graceful-shutdown": "^1.0.6",
     "es6-promisify": "^4.1.0",
     "config": "^1.20.1",
