--- a/package.json
+++ b/package.json
@@ -12,10 +12,10 @@
   "dependencies": {
     "@koa/cors": "^3.1.0",
     "config": "^3.3.1",
-    "gm": "^1.23.1",
     "koa": "^2.12.1",
     "koa-bodyparser": "^4.3.0",
     "koa-router": "^9.0.1",
+    "sharp": "^0.25.4",
     "superagent": "^5.2.2",
     "winston": "^3.2.1"
   },
