--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "image resizing and watermarking",
   "scripts": {
     "start": "node build/boot.js",
+    "pretest": "eslint --fix",
     "test": "nyc mocha --bail --exit"
   },
   "keywords": [
@@ -21,6 +22,7 @@
   },
   "devDependencies": {
     "chai": "^4.2.0",
+    "eslint": "^7.2.0",
     "mocha": "^8.0.1",
     "nyc": "^15.1.0",
     "supertest": "^4.0.2"
