--- a/package.json
+++ b/package.json
@@ -1,14 +1,15 @@
 {
-  "name": "image-proxy",
+  "name": "sharp-proxy",
   "version": "0.0.0",
-  "description": "image resizing and watermarking",
+  "description": "image upload and serving with resize and file format conversion with sharp.js",
   "scripts": {
     "start": "node build/boot.js",
     "pretest": "eslint --fix",
     "test": "nyc mocha --bail --exit"
   },
   "keywords": [
-    "koa"
+    "koa",
+    "sharp"
   ],
   "dependencies": {
     "@koa/cors": "^3.1.0",
